# rickTcal_Game

./: .pdm-python  README.md  pyproject.toml  requirements.txt
scripts/: format.sh  lint.sh  test.sh
src/ricktcal_game/: game.py
src/ricktcal_game/classes/: base_entity.py  sprites.py  student_entity.py  teacher_entity.py
src/ricktcal_game/core/: config.py  event_handler.py  font_manager.py  game_state_manager.py  position.json  position_manager.py  renderer.py  settings.json  settings_manager.py  sound_manager.py
src/ricktcal_game/entities/: erpin.py  guoju.py  joanne.py  sherum.py
src/ricktcal_game/scenes/: __init__.py  gameover.py  loading.py  settings.py  title.py
